# switchbot-client-app

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tox.ini
.github/workflows/: check_build.yml  main.yml  release.yml  test.yml
docker/: supervisord.conf
resources/: README.txt
resources/windows/: README.ja.txt  config.yml
scripts/: build.sh  build_bundle.sh  fix.sh  run.sh  run_tests.sh  setup.sh  test.sh  tests.sh
switchbot_client_app/: component.py  factory.py  main.py  object.py  section.py
switchbot_client_app/section/: __init__.py  air_conditioner.py  bot.py  color_bulb.py  contact_sensor.py  curtain.py  humidifier.py  light.py  meter.py  motion_sensor.py  plug.py  smart_fan.py
