[tool.poetry]
name = "switchbot-client-app"
version = "0.1.0"
description = "A SwitchBot desktop app interface for PC / Mac."
license = "Apache-2.0 or MIT"
authors = [
    "Kazuhito Osabe <kzosabe@wip.place>"
]
readme = "README.md"
repository = "https://github.com/kzosabe/switchbot-client-app"
homepage = "https://github.com/kzosabe/switchbot-client-app"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
]

[tool.poetry.scripts]
poetry = 'switchbot_client_app.main:run'

[tool.poetry.dependencies]
python = "~3.9.6"
switchbot-client = "^0.1.2"
PySide6 = "^6.1.3"

[tool.poetry.dev-dependencies]
black = ">=18.5b1"
pylint = "^2.0"
pytest = "^6.0"
pytest-cov = "^2.0"
pytest-mock = "^3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint."message control"]
disable = ["C0114,C0115,C0116,R0903"]

[tool.black]
line-length = 100
