[tool.poetry]
name = "switchbot-client-app"
version = "0.0.5"
description = "A SwitchBot desktop app interface for PC / Mac."
license = "Apache-2.0 or MIT"
authors = [
    "Kazuhito Osabe <kzosabe@wip.place>"
]
readme = "README.md"
repository = "https://github.com/kzosabe/switchbot-client-app"
homepage = "https://github.com/kzosabe/switchbot-client-app"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
]

[tool.poetry.scripts]
switchbot-client-app = 'switchbot_client_app.main:run'

[tool.poetry.dependencies]
python = "3.9.10"
switchbot-client = "^0.3.2"
PySide6 = "~6.2.2"

[tool.poetry.dev-dependencies]
black = ">=18.5b1"
pylint = "^2.13"
pytest = "^7.1"
pytest-cov = "^3.0"
pytest-mock = "^3.0"
pyinstaller = "^5.1"
tox = "^3.25.0"
mypy = "^0.960"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.master]
extension-pkg-allow-list = ["PySide6"]

[tool.pylint."message control"]
disable = ["C0103,C0114,C0115,C0116,C0415,E0401,R0801,R0903,R0902,R0911,R0913,R0915,E0611,E1101,W0511"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = [
    "PySide6.*",
    "switchbot_client.*",
]
ignore_missing_imports = true
